objects/Activity.object
<CustomObject>
    <fields>
        <fullName>DNIS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DNIS</label>
        <referenceTo>Phonenumber__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Call_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Five9ANI__c</fullName>
        <description>ANI</description>
        <label>Five9ANI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9AgentId__c</fullName>
        <formula>CASE( Five9Agent__c , 
    &quot;Awaldrop&quot;,&quot;4676094&quot;,
    &quot;benr@bristolwindows.org&quot;,&quot;4618727&quot;,
    &quot;jfuehrer@gmail.com&quot;,&quot;4618733&quot;,
    &quot;MartyH&quot;, &quot;4618732&quot;,
    &quot;OBRIEN&quot;,&quot;4618734&quot;,
    &quot;Samanthafisher3092@gmail.com&quot;,&quot;4663608&quot;,
    &quot;syncerfn@gmail.com&quot;,&quot;4764534&quot;,
    &quot;&quot;)</formula>
        <label>Five9AgentId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9Agent__c</fullName>
        <description>Agent who processed the call. User
name that you created in the VCC
Administrator application.</description>
        <label>Five9Agent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9CallType__c</fullName>
        <label>Five9CallType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9Campaign__c</fullName>
        <description>Campaign name.</description>
        <label>Five9Campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9DNIS__c</fullName>
        <description>DNIS</description>
        <inlineHelpText>A dialed number Identification service (DNIS) is a service offered by telecom providers to their commercial customers, letting them know what number was dialed for each incoming call.</inlineHelpText>
        <label>Five9DNIS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9DistributionMode__c</fullName>
        <description>How the interaction was distributed to
the agent:
- Automatic
- Manual (chat and email only)</description>
        <label>Five9DistributionMode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9InteractionDuration__c</fullName>
        <description>Time, in seconds, spent handling the
interaction (any type, including voice).</description>
        <inlineHelpText>Time, in seconds, spent handling the
interaction (any type, including voice).</inlineHelpText>
        <label>Five9InteractionDuration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9MediaSubtype__c</fullName>
        <description>Subtype of text interaction:
- Standard Chat
- Proactive Chat
- Preview Chat
- Generic conversation
- SMS conversation
- Rich Communication Services conversation</description>
        <inlineHelpText>Subtype of Texting interaction</inlineHelpText>
        <label>Five9MediaSubtype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9Queue__c</fullName>
        <description>Name of queue holding the interaction
(text interactions).</description>
        <inlineHelpText>Name of queue holding the interaction
(TEXT interactions).</inlineHelpText>
        <label>Five9Queue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9Recordings__c</fullName>
        <label>Five9Recordings</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Five9TalkAndHoldTimeInSeconds__c</fullName>
        <description>Time, in seconds, spent on hold and
talking.</description>
        <label>Five9TalkAndHoldTimeInSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Five9_Call_Time__c</fullName>
        <label>Five9_Call_Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Five9__Five9SessionId__c</fullName>
        <label>Five9 Session Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9TaskType__c</fullName>
        <label>Five9 Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Five9end_timestamp__c</fullName>
        <label>Five9end_timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Five9start_timestamp__c</fullName>
        <label>Five9start_timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>RetailStore</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubTaskResult__c</fullName>
        <label>SubTaskResult</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Task_Result__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Result_Level_3</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Result__c</fullName>
        <label>Task Result</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Task_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Result_Level_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Confirm</fullName>
                </value>
                <value>
                    <fullName>Re/Set</fullName>
                </value>
                <value>
                    <fullName>Follow Up</fullName>
                </value>
                <value>
                    <fullName>Log</fullName>
                    <default>true</default>
                    <label>Log</label>
                </value>
                <value>
                    <fullName>Result</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>Visit</referenceTo>
        <relationshipLabel>Confirmation</relationshipLabel>
        <relationshipName>Confirmation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>first_name__c</fullName>
        <description>FIVE9 first_name (contact variable)</description>
        <inlineHelpText>FIVE9 first_name (contact variable)</inlineHelpText>
        <label>first_name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>five9_Contact__c</fullName>
        <label>five9 Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_name__c</fullName>
        <description>FIVE9 last_name field (Contact Variable).</description>
        <inlineHelpText>FIVE9 last_name field (Contact Variable).</inlineHelpText>
        <label>last_name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__BaseObjectId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Base Object</label>
        <referenceTo>maps__BaseObject__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>BaseObjectIds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__LayerId__c</fullName>
        <label>Layer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__WA_AdvRouteWaypoint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the default lookup to associate the Advanced Route Waypoint</description>
        <label>Maps Advanced Route Waypoint</label>
        <referenceTo>maps__AdvRouteWaypoint__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>